/*
 * $Id: ChangeLog,v 1.254 2006-10-30 15:43:20 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-10-30 10:42 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
     * fixed problem in sheet name in Texcelprint introduced in last tprint commit
    

2006-10-29 18:14 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_button.ch
  * include/i_checkbox.ch
  * include/i_image.ch
  * include/i_windefs.ch
  * include/oohg.h
  * source/c_image.c
  * source/h_button.prg
  * source/h_checkbox.prg
  * source/h_image.prg
    * Moved some C (TImage specific) code to PRG level.
    + BACKCOLOR clause added (not only WHITEBACKGROUND).
    + BUFFER clause added (gets image from character buffer).
    + HBITMAP clause added (gets image from an existing HBITMAP).
  * source/miniprint.prg
    * Fixed double "HEIGHT" definition.

2006-10-29 17:54 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/miniprint.prg
  * include/miniprint.ch
    * fixed problem when printing with miniprint without TPRINT class

2006-10-28 15:44 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_button.prg
  * source/h_checkbox.prg
  * source/h_controlmisc.prg
  * source/h_hotkeybox.prg
  * source/h_internal.prg
  * source/h_label.prg
  * source/h_progressmeter.prg
  * source/h_spinner.prg
  * source/h_textarray.prg
  * source/h_textbox.prg
    + ::InitStyle() method added. It initializes INVISIBLE, NOTABSTOP
      and DISABLE clauses.

2006-10-27 22:03 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    * Validates for current window is active when searchs for parent.
    * Allows to hide non top modal windows. (Why not?)
  * include/i_browse.ch
  * include/i_grid.ch
  * include/i_xbrowse.ch
    * COLUMNWHEN is the same of WHEN clause.
